chore: JDK 22